# eodinga

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release-linux.yml  release-windows.yml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DSL.md  FAQ.md  OPERATIONS.md  PERFORMANCE.md  RELEASE.md  eodinga.1  eodinga.1.md
docs/man/: eodinga.1
eodinga/: __init__.py  __main__.py  common.py  config.py  crash_observability.py  doctor.py  metrics_state.py  metrics_store.py  observability.py  observability_state.py  runtime.py  stats_summary.py  watch.py  watch_loop.py
eodinga/content/: base.py  code.py  epub.py  html.py  hwp.py  office.py  pdf.py  registry.py  text.py
eodinga/core/: fs.py  rules.py  walker.py  watcher.py
eodinga/gui/: actions.py  app.py  design.py  docs.py  focus.py  hotkey_controller.py  launcher.py  launcher_context_menu.py  launcher_copy.py  launcher_core.py  launcher_file_preview.py  launcher_filters.py  launcher_focus.py  launcher_guidance.py  launcher_hints.py  launcher_history.py  launcher_keyboard.py  launcher_menu.py  launcher_mixins.py  launcher_navigation.py  launcher_panel_helpers.py  launcher_query.py  launcher_query_summary.py  launcher_result_menu.py  launcher_results.py  launcher_state.py  launcher_strings.py  launcher_support.py  launcher_text.py  launcher_window.py  query_chips.py  query_filters.py  result_menu.py  theme.py
eodinga/i18n/: __init__.py  en.json  ko.json
eodinga/index/: __init__.py  build.py  live.py  migrations.py  reader.py  schema.py  storage.py  writer.py
eodinga/launcher/: hotkey.py  hotkey_combo.py  hotkey_linux.py  hotkey_win.py
eodinga/query/: __init__.py  compiler.py  date_range.py  dsl.py  executor.py  matching.py  mode_validation.py  normalize.py  path_norm.py  path_scope.py  ranker.py  sql_cache.py  sqlite_cache.py  text.py  text_match.py
packaging/: _build_support.py  build.py  metadata.py  project_metadata.py  pyinstaller.spec  reproducible_tar.py
packaging/linux/: AppRun  appimage-builder.yml  appimage.sh  deb.sh  eodinga  eodinga.desktop  stage_runtime.py
packaging/windows/: cli_entry.py  eodinga.iss  gui_entry.py
scripts/: generate_man_page.py  generate_manpage.py  render_docs_screenshots.py  render_man_page.py
tests/: conftest.py
tests/integration/: _helpers.py  helpers.py  test_cli_e2e.py  test_cli_flows.py  test_cli_recovery.py  test_cli_restart_recovery.py  test_cli_roundtrip.py  test_cli_watch.py  test_e2e_index_search.py  test_hot_restart.py  test_hot_restart_resume.py  test_live_restart_persistence.py  test_live_update.py  test_live_update_restart.py  test_multi_root.py  test_multi_root_live_update.py  test_query_refresh_flow.py  test_reopen_cross_root_roundtrip.py  test_reopen_live_update_flow.py  test_reopen_multi_root_recreate.py  test_reopen_persistence.py  test_reopen_pruned_roots.py  test_reopen_research_flow.py  test_reopen_root_set_swap.py  test_round_trip_sequences.py  test_trimmed_root_reopen.py  test_watch_command.py  test_watch_moves.py  test_watch_path_reuse.py  test_watch_restart.py  test_watchdog_live_update.py
tests/perf/: _helpers.py  test_apply_events.py  test_bulk_upsert.py  test_cold_start.py  test_content_bulk_upsert.py  test_content_query.py  test_duplicate_event_batch.py  test_filtered_query_latency.py  test_query_fallback_latency.py  test_query_latency.py  test_rebuild_throughput.py  test_regex_query_latency.py  test_scan_fallbacks.py  test_scoped_query_latency.py  test_unicode_query_latency.py  test_walk_batched.py  test_walk_throughput.py  test_walker_throughput.py  test_warm_query_latency.py  test_watch_latency.py
tests/safety/: test_denylist.py  test_fs_readonly.py  test_no_network.py  test_runtime_writes.py
tests/unit/: test_acceptance_contract.py  test_appimage_audit_contract.py  test_appimage_recipe.py  test_build.py  test_build_dry_run.py  test_cli.py  test_cli_observability.py  test_code_parser.py  test_compiler.py  test_config.py  test_date_range.py  test_deb_audit_contract.py  test_deb_build_arch.py  test_deb_recipe.py  test_design_tokens.py  test_docs_assets.py  test_doctor.py  test_dsl_grammar.py  test_epub_parser.py  test_executor.py  test_fs.py  test_fs_readonly.py  test_gui_accessibility.py  test_gui_app.py  test_gui_hotkey_controller.py  test_gui_launcher.py  test_gui_launcher_chip_focus.py  test_gui_result_item.py  test_gui_theme.py  test_i18n.py  (+47 more)
(+47 files in other folders)
