[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eodinga"
version = "0.1.0"
description = "Instant lexical file search"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "loguru>=0.7.2",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.112",
  "pyright>=1.1.397",
  "pytest>=8.3",
  "ruff>=0.11",
]
parsers = []
gui = []

[tool.setuptools.packages.find]
include = ["eodinga*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "PT"]

[tool.pyright]
include = ["eodinga", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
